@@ -1,3 +1,8 @@
+2020-01-01  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* Makefile.am (pkgconfig_DATA): Conditionalize libdebuginfod.pc
+	on DEBUGINFOD.
+
 2019-12-22  Frank Ch. Eigler  <fche@redhat.com>
 
 	* elfutils.spec.in (debuginfod): Add BuildRequire dpkg
